--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
-Django>=4.2
-djangorestframework
-djangorestframework-simplejwt
-django-cors-headers
-drf-yasg
-gunicorn
-whitenoise
+asgiref==3.11.0
+astroid==3.3.11
+colorama==0.4.6
+dill==0.4.0
+Django==5.2.9
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-yasg==1.21.11
+gunicorn==23.0.0
+inflection==0.5.1
+isort==6.1.0
+mccabe==0.7.0
+packaging==25.0
+platformdirs==4.5.1
+PyJWT==2.10.1
+pylint==3.3.9
+pylint-django==2.6.1
+pylint-plugin-utils==0.9.0
+pytz==2025.2
+PyYAML==6.0.3
+sqlparse==0.5.4
+tomli==2.3.0
+tomlkit==0.13.3
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+whitenoise==6.11.0
